--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,6 +81,11 @@ jobs:
           # The change happened on Nimble v0.14.0. Also forcing the deps to be reinstalled on each os and cpu.
           key: nimbledeps-${{ matrix.nim.ref }}-${{ matrix.builder }}-${{ matrix.platform.cpu }}-${{ hashFiles('.pinned') }} # hashFiles returns a different value on windows
 
+      - name: Install deps (windows)
+        if: ${{ matrix.platform.os == 'windows'}}
+        run: |
+          pacman -S --noconfirm base-devel gcc nasm
+
       - name: Install deps
         if: ${{ steps.deps-cache.outputs.cache-hit != 'true' }}
         run: |
@@ -94,11 +99,6 @@ jobs:
 
           # Set GCC-14 as the default
           sudo update-alternatives --set gcc /usr/bin/gcc-14
-
-      - name: Install deps (windows)
-        if: ${{ matrix.platform.os == 'windows'}}
-        run: |
-          pacman -S --noconfirm base-devel gcc
 
       - name: Run tests
         run: |
