--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "libs/boringssl"]
-	path = libs/boringssl
-	url = https://boringssl.googlesource.com/boringssl
 [submodule "libs/lsquic"]
 	path = libs/lsquic
 	url = https://github.com/litespeedtech/lsquic.git
+[submodule "libs/vac_boringssl"]
+	path = libs/vac_boringssl
+	url = https://github.com/vacp2p/boringssl.git
